# RanokCalculator

./: .gitignore  .gitmodules  CMakeLists.txt
App/: CMakeLists.txt  main.cpp
Examples/NewFuncs/: 1_new.txt  2dspace.txt  Bone.txt  Chainik.txt  TeaCup.txt  euclid.txt  imgui.ini  lopatka.txt  sphere.txt
RanokCalculator/: CMakeLists.txt
RanokCalculator/Sources/Ranok/Core/: GradientModel.h  OpenclCalculator.cpp  OpenclCalculator.h  OpenclSystem.cpp  Space.h
RanokCalculator/Sources/Ranok/Core/Utils/: FlatArray.h
RanokCalculator/Sources/Ranok/OpenCL/: OpenclCalculator.cpp  OpenclCalculator.h
RanokLibraryCore/: CMakeLists.txt
RanokLibraryCore/Sources/Ranok/Core/: Color.h  GradientModel.cpp  OpenclCalculator.cpp  OpenclCalculator.h  OpenclSystem.cpp  OpenclSystem.h  Space.cpp  Space.h  Space3D.cpp  Space3D.h
RanokLibraryCore/Sources/Ranok/Core/Utils/: FlatArray.cpp  FlatArray.h
